syntax = "proto3";

option csharp_namespace = "GrpcService";

service MatchHistoryGrpcService {
  rpc CreateMatchHistory (MatchHistoryRequest) returns (MatchHistoryResponse);
  rpc GetMatchHistories (MatchHistoryRequest) returns (MatchHistoryResponse);
  rpc UpdateMatchHistory (MatchHistoryRequest) returns (MatchHistoryResponse);
  rpc DeleteMatchHistory (MatchHistoryRequest) returns (MatchHistoryResponse);
}

message MatchHistoryRequest {
  string Id = 1;
  string FirstUserId = 2;
  string SecondUserId = 3;
  double BetAmount = 4;
  string WinnerId = 5;
  string MatchDate = 6;
  string Status = 7;
}
message MatchHistory {
  string Id = 1;
  string FirstUserId = 2;
  string SecondUserId = 3;
  double BetAmount = 4;
  string WinnerId = 5;
  string MatchDate = 6;
  string Status = 7;
}

message MatchHistoryResponse {
  bool success = 1;
  MatchHistory matchHistory = 2;
}
